--- a/example/demo.html
+++ b/example/demo.html
@@ -66,7 +66,7 @@
 			
 			// destroy on escape
 			document.addEventListener('keydown', function(evt){
-				if (27 === evt.keyCode) o.destroy();a
+				if (27 === evt.keyCode) o.destroy();
 			});
 
 		});	
